--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <li>Built in microphone</li>
   </ul>
 
-  <img src="icons/chat.svg" alt="">
-  <img src="icons/flash.svg" alt="">
+  <img src="suit.jpg" width="300" alt="">
 </body>
 </html>
 
